.vscode-server/data/logs/20230120T120933/exthost1/exthost.log
[2023-01-20 12:09:35.565] [exthost] [info] Extension host with pid 200 started
[2023-01-20 12:09:35.593] [exthost] [info] Lock '/home/weiwei/.vscode-server/data/User/workspaceStorage/49c464b336ab42cf011bd81fa274147f/vscode.lock': Lock acquired.
[2023-01-20 12:09:35.821] [exthost] [info] ExtensionService#_doActivateExtension vscode.debug-auto-launch, startup: true, activationEvent: '*'
[2023-01-20 12:09:35.823] [exthost] [info] ExtensionService#_doActivateExtension vscode.git-base, startup: true, activationEvent: '*'
[2023-01-20 12:09:35.823] [exthost] [info] ExtensionService#_doActivateExtension vscode.ipynb, startup: true, activationEvent: '*'
[2023-01-20 12:09:35.932] [exthost] [info] ExtensionService#_doActivateExtension vscode.github, startup: true, activationEvent: '*'
[2023-01-20 12:09:35.967] [exthost] [info] ExtensionService#_doActivateExtension vscode.emmet, startup: false, activationEvent: 'onStartupFinished'
[2023-01-20 12:09:35.968] [exthost] [info] ExtensionService#_doActivateExtension vscode.merge-conflict, startup: false, activationEvent: 'onStartupFinished'
[2023-01-20 12:09:35.969] [exthost] [info] Eager extensions activated
[2023-01-20 12:09:39.341] [exthost] [info] ExtensionService#_doActivateExtension vscode.git, startup: false, activationEvent: 'api', root cause: vscode.github
[2023-01-20 14:44:25.833] [exthost] [info] ExtensionService#_doActivateExtension vscode.php-language-features, startup: false, activationEvent: 'onLanguage:php'
[2023-01-20 15:19:44.571] [exthost] [info] ExtensionService#_doActivateExtension onecentlin.laravel-blade, startup: false, activationEvent: 'onLanguage:blade'
[2023-01-20 15:45:10.030] [exthost] [info] ExtensionService#_doActivateExtension shufo.vscode-blade-formatter, startup: false, activationEvent: 'onLanguage:blade'
[2023-01-20 16:32:21.787] [exthost] [error] [shufo.vscode-blade-formatter] provider FAILED
[2023-01-20 16:32:21.793] [exthost] [error] SyntaxError: Parse Error : syntax error, unexpected '{' on line 1
> 1 | <?php if({{isse(t$name)}}==null) ?>
    |         ^
	at $.raiseError (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:101152)
	at $.error (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:101792)
	at $.read_expr_item (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:56527)
	at $.read_expr (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:47472)
	at $.read_if_expr (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:68548)
	at $.read_if (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:67912)
	at $.read_statement (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:83579)
	at $.read_top_statement (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:81824)
	at $.read_start (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:71428)
	at $.parse (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:100536)
	at fs.parseCode (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:128136)
	at Object.Ns [as parse] (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:128983)
	at Object.parse (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/prettier/standalone.js:1:201395)
	at qD (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/prettier/standalone.js:1:225602)
	at JD (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/prettier/standalone.js:1:228265)
	at /home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/prettier/standalone.js:40:40390
	at Object.format (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/prettier/standalone.js:40:40474)
	at D (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/blade-formatter/dist/bundle.js:1:3962)
	at /home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/blade-formatter/dist/bundle.js:4:384
	at String.replace (<anonymous>)
	at Function.replace (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/lodash/lodash.js:14608:48)
	at /home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/blade-formatter/dist/bundle.js:4:361
	at runMicrotasks (<anonymous>)
	at processTicksAndRejections (node:internal/process/task_queues:96:5)
[2023-01-20 16:33:24.451] [exthost] [error] [shufo.vscode-blade-formatter] provider FAILED
[2023-01-20 16:33:24.451] [exthost] [error] SyntaxError: Parse Error : syntax error, unexpected '{' on line 1
> 1 | <?php if({{isset($name)}}==null) ?>
    |         ^
	at $.raiseError (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:101152)
	at $.error (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:101792)
	at $.read_expr_item (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:56527)
	at $.read_expr (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:47472)
	at $.read_if_expr (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:68548)
	at $.read_if (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:67912)
	at $.read_statement (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:83579)
	at $.read_top_statement (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:81824)
	at $.read_start (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:71428)
	at $.parse (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:100536)
	at fs.parseCode (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:128136)
	at Object.Ns [as parse] (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/@prettier/plugin-php/standalone.js:3:128983)
	at Object.parse (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/prettier/standalone.js:1:201395)
	at qD (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/prettier/standalone.js:1:225602)
	at JD (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/prettier/standalone.js:1:228265)
	at /home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/prettier/standalone.js:40:40390
	at Object.format (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/prettier/standalone.js:40:40474)
	at D (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/blade-formatter/dist/bundle.js:1:3962)
	at /home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/blade-formatter/dist/bundle.js:4:384
	at String.replace (<anonymous>)
	at Function.replace (/home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/lodash/lodash.js:14608:48)
	at /home/weiwei/.vscode-server/extensions/shufo.vscode-blade-formatter-0.20.7/node_modules/blade-formatter/dist/bundle.js:4:361
	at runMicrotasks (<anonymous>)
	at processTicksAndRejections (node:internal/process/task_queues:96:5)
[2023-01-20 17:52:29.462] [exthost] [info] ExtensionService#_doActivateExtension bmewburn.vscode-intelephense-client, startup: false, activationEvent: 'onLanguage:php'
